; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_util.c_uv_os_getppid.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_util.c_uv_os_getppid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, i32 }

@TH32CS_SNAPPROCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_os_getppid() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__, align 8
  %4 = alloca i64, align 8
  store i32 -1, i32* %1, align 4
  %5 = call i64 (...) @GetCurrentProcessId()
  store i64 %5, i64* %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i32 24, i32* %6, align 8
  %7 = load i32, i32* @TH32CS_SNAPPROCESS, align 4
  %8 = call i32 @CreateToolhelp32Snapshot(i32 %7, i32 0)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i64 @Process32First(i32 %9, %struct.TYPE_4__* %3)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %27

12:                                               ; preds = %0
  br label %13

13:                                               ; preds = %22, %12
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  store i32 %20, i32* %1, align 4
  br label %26

21:                                               ; preds = %13
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %2, align 4
  %24 = call i64 @Process32Next(i32 %23, %struct.TYPE_4__* %3)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %13, label %26

26:                                               ; preds = %22, %18
  br label %27

27:                                               ; preds = %26, %0
  %28 = load i32, i32* %2, align 4
  %29 = call i32 @CloseHandle(i32 %28)
  %30 = load i32, i32* %1, align 4
  ret i32 %30
}

declare dso_local i64 @GetCurrentProcessId(...) #1

declare dso_local i32 @CreateToolhelp32Snapshot(i32, i32) #1

declare dso_local i64 @Process32First(i32, %struct.TYPE_4__*) #1

declare dso_local i64 @Process32Next(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @CloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
